src/mobius.esc/escjava/branches/sos/ESCTools/Javafe/test/javafe/test/fe/test14/Package.java
// Test illegal import statements

import p.NoSuchPackage.*;		// error

class Package {}
